Consertando erros relacionados ào caminha dos arquivos

--- a/edenInicio.html
+++ b/edenInicio.html
@@ -153,8 +153,8 @@
 
             <div class="bloco2">
                 <h3>Transparência:</h3>
-                <button><a id="item" href="edenTermosdeUso.html">Termos de Uso</a></button>
-                <button><a id="item" href="edenPoliticaDePrivacidade.html">Política de Privacidade</a></button>
+                <button><a id="item" href="HTML/edenTermosdeUso.html">Termos de Uso</a></button>
+                <button><a id="item" href="HTML/edenPoliticaDePrivacidade.html">Política de Privacidade</a></button>
             </div>
         </div>
     </div>
