--- a/HTML/edenLogin.html
+++ b/HTML/edenLogin.html
@@ -6,7 +6,7 @@
     <title>Eden</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../CSS/edenLogin.css">
-    <link rel="icon" href="Imagens/EDEN logotipo png.png">
+    <link rel="icon" href="../Imagens/EDEN logotipo png.png">
 </head>
 
 <!-- Nav-Bar -->
@@ -14,7 +14,7 @@
     <nav>
         <ul>
             <li><a href="../edenInicio.html">Início</a></li>
-            <li><a href="edenInicio.html#app">App</a></li>
+            <li><a href="../edenInicio.html#app">App</a></li>
             <li><a href="edenQuemSomos.html">Quem somos</a></li>
             <li><a href="edenLogin.html">Login</a></li>
             <li><a href="edenLoja.html">Loja</a></li>
