--- a/HTML/edenLoja.html
+++ b/HTML/edenLoja.html
@@ -6,7 +6,7 @@
     <title>Eden</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../CSS/edenLoja.css">
-    <link rel="icon" href="Imagens/EDEN logotipo png.png">
+    <link rel="icon" href="../Imagens/EDEN logotipo png.png">
 </head>
 
 <!-- Nav-Bar -->
@@ -14,14 +14,14 @@
     <nav>
         <ul>
             <li><a href="../edenInicio.html">Início</a></li>
-            <li><a href="edenInicio.html#app">App</a></li>
+            <li><a href="../edenInicio.html#app">App</a></li>
             <li><a href="edenQuemSomos.html">Quem somos</a></li>
             <li><a href="edenLogin.html">Login</a></li>
             <li><a href="edenLoja.html">Loja</a></li>
 
-            <a href="edenCarrinhoCompras.html"><img src="Imagens/Carrinho de Compras.png" alt="" id="carrinhoCompras"></a>
+            <a href="edenCarrinhoCompras.html"><img src="../Imagens/Carrinho de Compras.png" alt="" id="carrinhoCompras"></a>
 
-            <a href=""><img src="Imagens/Perfil.png" alt="" id="perfil"></a>
+            <a href=""><img src="../Imagens/Perfil.png" alt="" id="perfil"></a>
         </ul>
     </nav>
 </header>
@@ -32,7 +32,7 @@
         <div class="topoPagina">
             <input type="text" placeholder="Buscar produto, categoria ou marca">
 
-            <img src="Imagens/Propaganda Site.gif" alt="" class="edenPropaganda">
+            <img src="../Imagens/Propaganda Site.gif" alt="" class="edenPropaganda">
         </div>
     </container1>
 
@@ -277,7 +277,7 @@
     <container3>
         <H2>Adicione ao carrinho e faça sua compra pelo app</H2>
 
-        <img src="Imagens/Compras App.gif" alt="" class="compraApp">
+        <img src="../Imagens/Compras App.gif" alt="" class="compraApp">
     </container3>
 
     <footer>
