--- a/HTML/edenCarrinhoCompras.html
+++ b/HTML/edenCarrinhoCompras.html
@@ -19,7 +19,7 @@
             <li><a href="edenLogin.html">Login</a></li>
             <li><a href="edenLoja.html">Loja</a></li>
 
-            <a href=""><img src="Imagens/Perfil.png" alt="" id="perfil"></a>
+            <a href=""><img src="../Imagens/Perfil.png" alt="" id="perfil"></a>
         </ul>
     </nav>
 </header>
@@ -27,7 +27,7 @@
 <body>
     <section class="container">
         <div class="partePrincipal">
-            <img src="Imagens/Robo.png" alt="" id="robo">
+            <img src="../Imagens/Robo.png" alt="" id="robo">
             <h2>Seu Carrinho de Compras está vazio</h2>
             <button><a href="edenLoja.html">Ir às compras</a></button>
         </div>
