melhorando algumas coisas no html e css para a semântica

--- a/HTML/edenLoja.html
+++ b/HTML/edenLoja.html
@@ -28,13 +28,13 @@
 
 <body>
     <!-- Barra de busca e Propaganda -->
-    <container1>
+    <section id="container1">
         <div class="topoPagina">
             <input type="text" placeholder="Buscar produto, categoria ou marca">
 
             <img src="../Imagens/Propaganda Site.gif" alt="" class="edenPropaganda">
         </div>
-    </container1>
+    </section>
 
     <!-- Título -->
     <section class="separador">
@@ -44,7 +44,7 @@
     </section>
 
     <!-- Produtos -->
-    <container2>
+    <section id="container2">
         <div class="parte2">
             <h3>Celulares:</h3>
 
@@ -270,15 +270,15 @@
                 </div>
             </div>
         </div>
-    </container2>
+    </section>
 
     <hr>
 
-    <container3>
+    <section id="container3">
         <H2>Adicione ao carrinho e faça sua compra pelo app</H2>
 
         <img src="../Imagens/Compras App.gif" alt="" class="compraApp">
-    </container3>
+    </section>
 
     <footer>
         ©Eden 2024
