--- a/HTML/edenQuemSomos.html
+++ b/HTML/edenQuemSomos.html
@@ -30,13 +30,13 @@
         </div>
     </section>
 
-    <container1>
+    <section id="objetivo">
         <div class="parte1">
             <p>Ao passar dos anos, cada vez mais temos um maior contato com aparelhos eletrônicos. Mas poucas pessoas sabem que o descarte incorreto desses aparelhos podem ser prejudiciais para nós e o meio ambiente. Por isso o Grupo Luminary teve a ideia de criar o aplicativo Eden, onde você consegue vender seus aparelhos eletrônicos usados ou comprar um. Assim evitamos o descarte desses aparelhos que ainda possam ter alguma utilidade.</p>
 
             <img src="../Imagens/Robo.png" alt="">
         </div>
-    </container1>
+    </section>
 
     <!-- Título Equipe -->
     <section class="separador">
@@ -45,7 +45,7 @@
         </div>
     </section>
 
-    <container2>
+    <section id="equipes">
         <div class="parte2">
             <div class="equipe1ano">
                 <img src="../Imagens/Equipe 1° ano.jpeg" alt="">
@@ -87,7 +87,7 @@
                 </div>
             </div>
         </div>
-    </container2>
+    </section>
 
     <!-- Título Valores -->
     <section class="separador">
@@ -96,7 +96,7 @@
         </div>
     </section>
 
-    <container3>
+    <section id="valoresGrupo">
         <div class="parte3">
             <div class="valores">
                 <div class="box">
@@ -150,7 +150,7 @@
             </div>
         </div>
         </div>
-    </container3>
+    </section>
 
     <footer>
         ©Eden 2024
