--- a/HTML/edenTermosdeUso.html
+++ b/HTML/edenTermosdeUso.html
@@ -23,7 +23,7 @@
 </header>
 
 <body>
-    <container>
+    <section id="informacoes">
         <div class="redicionamento">
             <!-- Indice -->
             <div class="indice">
@@ -114,7 +114,7 @@
                 </div>
             </div>
         </div>
-    </container>
+    </section>
 
     <footer>
         ©Eden 2024
