--- a/HTML/edenTermosdeUso.html
+++ b/HTML/edenTermosdeUso.html
@@ -6,6 +6,7 @@
     <title>Termos de Uso</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../CSS/edenTermosdeUso.css">
+    <link rel="stylesheet" href="../CSS/edenHeader.css">
     <link rel="icon" href="../Imagens/EDEN logotipo png.png">
 </head>
 
