--- a/src/html/edenLogin.html
+++ b/src/html/edenLogin.html
@@ -15,10 +15,8 @@
     <nav>
         <ul>
             <li><a href="../edenInicio.html">Início</a></li>
+            <li><a href="./edenQuemSomos.html">Quem somos</a></li>
             <li><a href="../edenInicio.html#app">App</a></li>
-            <li><a href="edenQuemSomos.html">Quem somos</a></li>
-            <li><a href="edenLogin.html">Login</a></li>
-            <li><a href="edenLoja.html">Loja</a></li>
         </ul>
     </nav>
 </header>
