mudando os caminhos na definição de importação

--- a/src/html/edenCarrinhoCompras.html
+++ b/src/html/edenCarrinhoCompras.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrinho</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../CSS/edenCarrinhoCompras.css">
-    <link rel="stylesheet" href="../CSS//edenHeader.css">
-    <link rel="icon" href="../Imagens/EDEN logotipo png.png">
+    <link rel="stylesheet" href="../css/edenCarrinhoCompras.css">
+    <link rel="stylesheet" href="../css//edenHeader.css">
+    <link rel="icon" href="../imagens/EDEN logotipo png.png">
 </head>
 
 <!-- Nav-Bar -->
@@ -20,7 +20,7 @@
             <li><a href="edenLogin.html">Login</a></li>
             <li><a href="edenLoja.html">Loja</a></li>
 
-            <a href=""><img src="../Imagens/Perfil.png" alt="" id="perfil"></a>
+            <a href=""><img src="../imagens/Perfil.png" alt="" id="perfil"></a>
         </ul>
     </nav>
 </header>
@@ -28,7 +28,7 @@
 <body>
     <section class="container">
         <div class="partePrincipal">
-            <img src="../Imagens/Robo.png" alt="" id="robo">
+            <img src="../imagens/Robo.png" alt="" id="robo">
             <h2>Seu Carrinho de Compras está vazio</h2>
             <button><a href="edenLoja.html">Ir às compras</a></button>
         </div>
