--- a/src/html/edenRedefinirSenha.html
+++ b/src/html/edenRedefinirSenha.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redefinir Senha</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../CSS/edenRedefinirSenha.css">
-    <link rel="stylesheet" href="../CSS/edenHeader.css">
-    <link rel="icon" href="../Imagens/EDEN logotipo png.png">
+    <link rel="stylesheet" href="../css/edenRedefinirSenha.css">
+    <link rel="stylesheet" href="../css/edenHeader.css">
+    <link rel="icon" href="../imagens/EDEN logotipo png.png">
 </head>
 
 <!-- Nav-Bar -->
