--- a/src/html/edenLoja.html
+++ b/src/html/edenLoja.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eden</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../CSS/edenLoja.css">
-    <link rel="stylesheet" href="../CSS/edenHeader.css">
-    <link rel="icon" href="../Imagens/EDEN logotipo png.png">
+    <link rel="stylesheet" href="../css/edenLoja.css">
+    <link rel="stylesheet" href="../css/edenHeader.css">
+    <link rel="icon" href="../imagens/EDEN logotipo png.png">
 </head>
 
 <!-- Nav-Bar -->
@@ -20,9 +20,9 @@
             <li><a href="edenLogin.html">Login</a></li>
             <li><a href="edenLoja.html">Loja</a></li>
 
-            <a href="edenCarrinhoCompras.html"><img src="../Imagens/Carrinho de Compras.png" alt="" id="carrinhoCompras"></a>
+            <a href="edenCarrinhoCompras.html"><img src="../imagens/Carrinho de Compras.png" alt="" id="carrinhoCompras"></a>
 
-            <a href=""><img src="../Imagens/Perfil.png" alt="" id="perfil"></a>
+            <a href=""><img src="../imagens/Perfil.png" alt="" id="perfil"></a>
         </ul>
     </nav>
 </header>
@@ -33,7 +33,7 @@
         <div class="topoPagina">
             <input type="text" placeholder="Buscar produto, categoria ou marca">
 
-            <img src="../Imagens/Propaganda Site.gif" alt="" class="edenPropaganda">
+            <img src="../imagens/Propaganda Site.gif" alt="" class="edenPropaganda">
         </div>
     </section>
 
@@ -278,7 +278,7 @@
     <section id="container3">
         <H2>Adicione ao carrinho e faça sua compra pelo app</H2>
 
-        <img src="../Imagens/Compras App.gif" alt="" class="compraApp">
+        <img src="../imagens/Compras App.gif" alt="" class="compraApp">
     </section>
 
     <footer>
