--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eden</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/edenInicio.css">
-    <link rel="stylesheet" href="CSS/edenHeader.css">
-    <link rel="icon" href="Imagens/EDEN logotipo png.png">
+    <link rel="stylesheet" href="css/edenInicio.css">
+    <link rel="stylesheet" href="css/edenHeader.css">
+    <link rel="icon" href="imagens/EDEN logotipo png.png">
 </head>
 
 <!-- Nav-Bar -->
@@ -15,7 +15,7 @@
     <nav>
         <ul>
             <li><a href="edenInicio.html">Início</a></li>
-            <li><a href="./HTML/edenQuemSomos.html">Quem somos</a></li>
+            <li><a href="./html/edenQuemSomos.html">Quem somos</a></li>
             <li><a href="edenInicio.html#app">App</a></li>
         </ul>
     </nav>
