--- a/src/html/edenAreaRestrita.html
+++ b/src/html/edenAreaRestrita.html
@@ -11,8 +11,8 @@
 <header class="main-header">
     <nav>
         <ul>
-            <li><a href="../edenInicio.html">Início</a></li>
-            <li><a href="../edenInicio.html#app">App</a></li>
+            <li><a href="../index.html">Início</a></li>
+            <li><a href="../index.html#app">App</a></li>
             <li><a href="edenQuemSomos.html">Quem somos</a></li>
             <li><a href="edenLogin.html">Login</a></li>
             <li><a href="edenLoja.html">Loja</a></li>
