--- a/src/html/edenQuemSomos.html
+++ b/src/html/edenQuemSomos.html
@@ -14,9 +14,9 @@
 <header class="main-header">
     <nav>
         <ul>
-            <li><a href="../edenInicio.html">Início</a></li>
+            <li><a href="../index.html">Início</a></li>
             <li><a href="./edenQuemSomos.html">Quem somos</a></li>
-            <li><a href="../edenInicio.html#app">App</a></li>
+            <li><a href="../index.html">App</a></li>
         </ul>
     </nav>
 </header>
