--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eden</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/edenInicio.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/edenHeader.css">
     <link rel="icon" href="imagens/EDEN logotipo png.png">
 </head>
@@ -14,9 +14,9 @@
 <header class="main-header">
     <nav>
         <ul>
-            <li><a href="edenInicio.html">Início</a></li>
+            <li><a href="index.html">Início</a></li>
             <li><a href="./html/edenQuemSomos.html">Quem somos</a></li>
-            <li><a href="edenInicio.html#app">App</a></li>
+            <li><a href="index.html#app">App</a></li>
         </ul>
     </nav>
 </header>
@@ -137,8 +137,8 @@
     </div>
 
     <!-- Última parte da tela Inicial -->
-    <div class="container6">
-        <div class="parte6">
+    <footer>
+        <div class="footer">
             <div class="edenSince">
                 <p>©Eden desde 2024</p>
             </div>
@@ -156,6 +156,6 @@
                 <button><a id="item" href="HTML/edenPoliticaDePrivacidade.html">Política de Privacidade</a></button>
             </div>
         </div>
-    </div>
+    </footer>
 </body>
 </html>
