adicionando a logo no index e o estilo do header, e modificando o nome da imagem da logo

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
 
 <!-- Nav-Bar -->
 <header class="main-header">
-    <nav>
+    <img id="logo" src="./imagens/EDENLogotipo.png" alt="logo">
+    <nav class="nav-bar">
         <ul>
             <li><a href="index.html">Início</a></li>
             <li><a href="./html/edenQuemSomos.html">Quem somos</a></li>
