--- a/src/html/edenQuemSomos.html
+++ b/src/html/edenQuemSomos.html
@@ -12,11 +12,12 @@
 
 <!-- Nav-Bar -->
 <header class="main-header">
-    <nav>
+    <img id="logo" src="../imagens/EDENLogotipo.png" alt="logo">
+    <nav class="nav-bar">
         <ul>
             <li><a href="../index.html">Início</a></li>
             <li><a href="./edenQuemSomos.html">Quem somos</a></li>
-            <li><a href="../index.html">App</a></li>
+            <li><a href="../index.html#app">App</a></li>
         </ul>
     </nav>
 </header>
