consertando os diretórios e adicionando novas telas

--- a/src/html/edenQuemSomos.html
+++ b/src/html/edenQuemSomos.html
@@ -6,23 +6,26 @@
     <title>Quem Somos</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/edenQuemSomos.css">
-    <link rel="stylesheet" href="../css//edenHeader.css">
+    <link rel="stylesheet" href="../css/edenHeader.css">
     <link rel="icon" href="../imagens/EDEN logotipo png.png">
 </head>
 
-<!-- Nav-Bar -->
-<header class="main-header">
-    <img id="logo" src="../imagens/EDENLogotipo.png" alt="logo">
-    <nav class="nav-bar">
-        <ul>
-            <li><a href="../index.html">Início</a></li>
-            <li><a href="./edenQuemSomos.html">Quem somos</a></li>
-            <li><a href="../index.html#app">App</a></li>
-        </ul>
-    </nav>
-</header>
-
 <body>
+    <!-- Nav-Bar -->
+    <header class="main-header">
+        <a href="../index.html"><img src="../imagens/EDEN logotipo png.png" alt="" id="edenLogo"></a>
+
+        <nav>
+            <ul>
+                <li><a href="../index.html">Início</a></li>
+                <li><a href="edenQuemSomos.html">Quem somos</a></li>
+                <li><a href="../index.html#app">App</a></li>
+            </ul>
+        </nav>
+
+        <a href="edenLogin.html"><img src="../imagens/Cadeado Nav-bar.png" alt="" id="cadeado_navbar"></a>
+    </header>
+
     <!-- Objetivo Título -->
     <section class="separador primeiroSeparador">
         <div class="separadorConteudo">
@@ -30,13 +33,13 @@
         </div>
     </section>
 
-    <section id="objetivo">
+    <container1>
         <div class="parte1">
             <p>Ao passar dos anos, cada vez mais temos um maior contato com aparelhos eletrônicos. Mas poucas pessoas sabem que o descarte incorreto desses aparelhos podem ser prejudiciais para nós e o meio ambiente. Por isso o Grupo Luminary teve a ideia de criar o aplicativo Eden, onde você consegue vender seus aparelhos eletrônicos usados ou comprar um. Assim evitamos o descarte desses aparelhos que ainda possam ter alguma utilidade.</p>
 
             <img src="../imagens/Robo.png" alt="">
         </div>
-    </section>
+    </container1>
 
     <!-- Título Equipe -->
     <section class="separador">
@@ -45,7 +48,7 @@
         </div>
     </section>
 
-    <section id="equipes">
+    <container2>
         <div class="parte2">
             <div class="equipe1ano">
                 <img src="../imagens/Equipe 1° ano.jpeg" alt="">
@@ -87,7 +90,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </container2>
 
     <!-- Título Valores -->
     <section class="separador">
@@ -96,7 +99,7 @@
         </div>
     </section>
 
-    <section id="valoresGrupo">
+    <container3>
         <div class="parte3">
             <div class="valores">
                 <div class="box">
@@ -150,7 +153,7 @@
             </div>
         </div>
         </div>
-    </section>
+    </container3>
 
     <footer>
         ©Eden 2024
