--- a/src/html/edenLogin.html
+++ b/src/html/edenLogin.html
@@ -3,99 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eden</title>
+    <title>Login</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/edenLogin.css">
     <link rel="stylesheet" href="../css/edenHeader.css">
     <link rel="icon" href="../imagens/EDEN logotipo png.png">
 </head>
 
-<!-- Nav-Bar -->
-<header class="main-header">
-    <img id="logo" src="../imagens/EDENLogotipo.png" alt="logo">
-    <nav class="nav-bar">
-        <ul>
-            <li><a href="../index.html">Início</a></li>
-            <li><a href="./edenQuemSomos.html">Quem somos</a></li>
-            <li><a href="../index.html#app">App</a></li>
-        </ul>
-    </nav>
-</header>
-
 <body>
-    <!-- Div Container -->
-    <div class="container" id="container">
-        <!-- Form para criar um cadastro -->
-        <div class="form cadastro">
-            <form>
-                <h1>Criando Conta</h1>
-                <span>ou use seu e-mail registrado</span>
-                <input type="text" placeholder="Nome">
-                <input type="email" placeholder="E-mail">
-                <input type="password" placeholder="Senha">
-                <button>Cadastrar</button>
-            </form>
-        </div>
+    <!-- Nav-Bar -->
+    <header class="main-header">
+        <a href="../index.html"><img src="../imagens/EDEN logotipo png.png" alt="" id="edenLogo"></a>
 
-        <!-- Form para fazer login -->
-        <div class="form login">
-            <form>
-                <h1>Entrar na Conta</h1>
-                <span>ou use seu e-mail password</span>
-                <input type="email" placeholder="E-mail">
-                <input type="password" placeholder="Senha">
-                <p>Esqueceu sua Senha? Clique <a href="edenRedefinirSenha.html">aqui</a></p>
-                <button>Entrar</button>
-            </form>
-        </div>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Início</a></li>
+                <li><a href="edenQuemSomos.html">Quem somos</a></li>
+                <li><a href="../index.html#app">App</a></li>
+            </ul>
+        </nav>
 
-        <!-- Mensagem lateral Container -->
-        <div class="alternar-container">
-            <div class="alternar">
+        <a href="edenLogin.html"><img src="../imagens/Cadeado Nav-bar.png" alt="" id="cadeado_navbar"></a>
+    </header>
 
-                <!-- Mensagem lateral Login -->
-                <div class="alternar-painel alternar-direita">
-                    <h1>Bem-vindo de volta!</h1>
-                    <p>Insira seus dados pessoais para usar todos os recursos do site</p>
-                    <br>
-                    <p class="mensagemBotao">Ainda não tem uma conta?</p>
-                    <button class="oculto" id="registro">Cadastre-se</button>
-                </div>
+    <img src="../imagens/Cadeado.png" alt="" id="cadeado">
+    <div class="partePrincipal">
+        <h1>Área Restrita </h1>
+        <p>Área resevada para administradores do grupo Luminary</p>
 
-                <!-- Mensagem lateral Cadastro -->
-                <div class="alternar-painel alternar-esquerda">
-                    <h1>Olá!</h1>
-                    <p>Registre seus dados pessoais para usar todos os recursos do nosso site!</p>
-                    <br>
-                    <p class="mensagemBotao">Já tem uma conta?</p>
-                    <button class="oculto" id="login">Entrar</button>
-                </div>
-            </div>
-        </div> <!-- Fim mensagem lateral Container -->
-
-    </div> <!-- Fim div container -->
-
-    <!-- Footer -->
-    <footer>
-        ©Eden 2024
-    </footer>
-
-    <!-- Scrip JS -->
-    <script >
-        // Variavéis
-        const container = document.getElementById('container');
-        const registerBtn = document.getElementById('registro');
-        const loginBtn = document.getElementById('login');
-
-        // Adicionar transição ao clicar no botão
-        registerBtn.addEventListener('click', () =>{
-            container.classList.add("active");
-        })
-
-        // Remover transição ao clicar no botão
-        loginBtn.addEventListener('click', () =>{
-            container.classList.remove("active");
-        })
-    </script>
+        <form>
+            <input type="text" placeholder="User">
+            <input type="password" placeholder="Senha">
+            <input type="submit" value="Entrar" id="submit">
+        </form>
+    </div>
 </body>
 </html>
