--- a/src/index.html
+++ b/src/index.html
@@ -5,46 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eden</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/edenHeader.css">
-    <link rel="icon" href="imagens/EDEN logotipo png.png">
+    <link rel="stylesheet" href="CSS's/style.css">
+    <link rel="stylesheet" href="CSS's/edenHeader.css">
+    <link rel="icon" href="Imagens/EDEN logotipo png.png">
 </head>
 
-<!-- Nav-Bar -->
-<header class="main-header">
-    <img id="logo" src="./imagens/EDENLogotipo.png" alt="logo">
-    <nav class="nav-bar">
-        <ul>
-            <li><a href="index.html">Início</a></li>
-            <li><a href="./html/edenQuemSomos.html">Quem somos</a></li>
-            <li><a href="index.html#app">App</a></li>
-        </ul>
-    </nav>
-</header>
-
 <body>
+    <!-- Nav-Bar -->
+    <header class="main-header">
+        <a href="index.html"><img src="Imagens/EDEN logotipo png.png" alt="" id="edenLogo"></a>
+
+        <nav>
+            <ul>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="./HTMLS/edenQuemSomos.html">Quem somos</a></li>
+                <li><a href="index.html#app">App</a></li>
+            </ul>
+        </nav>
+
+        <a href="./HTMLS/edenLogin.html"><img src="Imagens/Cadeado Nav-bar.png" alt="" id="cadeado_navbar"></a>
+    </header>
+
     <!-- Primeira parte da Tela Inicial -->
-    <div class="container1">
+    <container1>
         <div class="parte1">
             <div class="textoParte1">
                 <h1>Não sabe onde anunciar seu eletrônico?
                 <br>Vem pro <strong class="nomeEden">Eden</strong>!</h1>
 
-                <button>
+                <div class="botao">
                     <img src="Imagens/Apple store logo.png" alt="" class="appleStoreLogo">
-                </button>
-                
-                <button>
+                    
                     <img src="Imagens/Google Play logo.png" alt="" class="googlePlayLogo">
-                </button>
+                </div>
             </div>
 
             <img src="Imagens/Robo.png" alt="" id="roboParte1">
         </div>
-    </div>
+    </container1>
 
     <!-- Segunda parte da tela Inicial -->
-    <div class="container2">
+    <container2>
         <div class="parte2" id="app">
             <img src="Imagens/Celular e Robo.gif" alt="" id="celularParte2">
 
@@ -59,13 +60,13 @@
                 <br><strong>Mapa de anúncios:</strong>
                 <br>Veja os produtos mais próximos no mapa, negocie e pegue na mesma hora.</p>
 
-                <button><a href="edenQuemSomos.html">Mais sobre a equipe</a></button>
+                <button><a href="./HTMLS/edenQuemSomos.html">Mais sobre a equipe</a></button>
             </div>
         </div>
-    </div>
+    </container2>
 
     <!-- Terceira parte da tela Inicial -->
-    <div class="container3">
+    <container3>
         <div class="parte3">
             <h1>Conheça mais sobre o <strong class="nomeEden">Eden</strong> através de nosso Vídeo Institucional</h1>
 
@@ -73,7 +74,7 @@
                 src="https://www.youtube.com/embed/lKs7TueTbok?si=bJfA8xsMgIB_8-fn" title="Video Institucional Eden" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen id="videoInstitucional">
             </iframe>
         </div>
-    </div>
+    </container3>
 
     <!-- Forum -->
     <section class="titulo">
@@ -84,27 +85,30 @@
         </div>
     </section>
 
-    <div class="container4">
+    <container4>
         <div class="parte4">
             <img src="Imagens/Fórum.gif" alt="" id="celularParte4">
 
             <div class="textoParte4">
-                Você tem alguma dúvida sobre seu aparelho? Em como consertar ou se é melhor descartar em um ponto de coleta ou até mesmo vender e comprar outro?
-                <br>
-                <br>
-                Em nosso fórum, você pode tirar todas as suas dúvidas e receber respostas de nossos usuários ou  responder alguma dúvida se souber a solução.
-                <br>
-                <br>
-                Nosso fórum é organizado a partir de <strong>#tags</strong> criadas pelos próprios usuários para objetificar sua publicação e melhorar a experiência dos demais. 
-                <br>
-                <br>
-                Você viu alguma dica valiosa de como você pode preservar a vida útil de seu eletrônico e quer salvar para depois? Não se preocupe!
-                <br>
-                <br>
-                No <strong class="nomeEden">Eden</strong> você pode curtir ou favoritar uma publicação, criando assim praticidade para você a visualizar quantas vezes quiser posteriormente.
+                <h1>Forúm:</h1>
+                <p>
+                    Você tem alguma dúvida sobre seu aparelho? Em como consertar ou se é melhor descartar em um ponto de coleta ou até mesmo vender e comprar outro?
+                    <br>
+                    <br>
+                    Em nosso <strong>fórum</strong>, você pode tirar todas as suas dúvidas e receber respostas de nossos usuários ou  responder alguma dúvida se souber a solução.
+                    <br>
+                    <br>
+                    Nosso fórum é organizado a partir de <strong>#tags</strong> criadas pelos próprios usuários para objetificar sua publicação e melhorar a experiência dos demais. 
+                    <br>
+                    <br>
+                    Você viu alguma dica valiosa de como você pode preservar a vida útil de seu eletrônico e quer salvar para depois? Não se preocupe!
+                    <br>
+                    <br>
+                    No <strong class="nomeEden">Eden</strong> você pode curtir ou favoritar uma publicação, criando assim praticidade para você a visualizar quantas vezes quiser posteriormente.
+                </p>
             </div>
         </div>
-    </div>
+    </container4>
 
     <!-- Artigos -->
     <section class="titulo">
@@ -115,31 +119,34 @@
         </div>
     </section>
 
-    <div class="container5">
+    <container5>
         <div class="parte5">
             <img src="Imagens/Artigos.gif" alt="" id="celularParte5">
 
             <div class="textoParte5">
-                Ao acessar a aba de <strong>artigos</strong>, você encontrará as notícias mais recentes sobre o mundo da tecnologia e aparelhos eletrônicos.
-                <br>
-                <br>
-                Te manteremos atualizados das novas invenções no mercado, curiosidades, como elas podem ser prejudiciais, como reutilizar aparelhos, como garantir sua Segurança Digital, tutoriais de reparo, entre várias outras informações para manter seu dia a dia bem informado.
-                <br>
-                <br>
-                Nossos artigos são escritos por especialistas da área, garantindo sempre informações precisas, úteis e verdadeiras.
-                <br>
-                <br>
-                Para facilitar suas buscas, utilize nossos filtros de conteúdos relevância e data de publicação.
-                <br>
-                <br>
-                Com o <strong class="nomeEden">Eden</strong> é simples e fácil! Basta navegar e se informar!
+                <h1>Artigos:</h1>
+                <p>
+                    Ao acessar a aba de <strong>artigos</strong>, você encontrará as notícias mais recentes sobre o mundo da tecnologia e aparelhos eletrônicos.
+                    <br>
+                    <br>
+                    Te manteremos atualizados das novas invenções no mercado, curiosidades, como elas podem ser prejudiciais, como reutilizar aparelhos, como garantir sua Segurança Digital, tutoriais de reparo, entre várias outras informações para manter seu dia a dia bem informado.
+                    <br>
+                    <br>
+                    Nossos artigos são escritos por especialistas da área, garantindo sempre informações precisas, úteis e verdadeiras.
+                    <br>
+                    <br>
+                    Para facilitar suas buscas, utilize nossos filtros de conteúdos relevância e data de publicação.
+                    <br>
+                    <br>
+                    Com o <strong class="nomeEden">Eden</strong> é simples e fácil! Basta navegar e se informar!
+                </p>
             </div>
         </div>
-    </div>
+    </container5>
 
     <!-- Última parte da tela Inicial -->
-    <footer>
-        <div class="footer">
+    <container6>
+        <div class="parte6">
             <div class="edenSince">
                 <p>©Eden desde 2024</p>
             </div>
@@ -153,10 +160,10 @@
 
             <div class="bloco2">
                 <h3>Transparência:</h3>
-                <button><a id="item" href="HTML/edenTermosdeUso.html">Termos de Uso</a></button>
-                <button><a id="item" href="HTML/edenPoliticaDePrivacidade.html">Política de Privacidade</a></button>
+                <button><a id="item" href="./HTMLS/edenTermosdeUso.html">Termos de Uso</a></button>
+                <button><a id="item" href="./HTMLS/edenPoliticaDePrivacidade.html">Política de Privacidade</a></button>
             </div>
         </div>
-    </footer>
+    </container6>
 </body>
 </html>
