--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eden</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="CSS's/style.css">
-    <link rel="stylesheet" href="CSS's/edenHeader.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/edenHeader.css">
     <link rel="icon" href="Imagens/EDEN logotipo png.png">
 </head>
 
