--- a/src/index.html
+++ b/src/index.html
@@ -7,23 +7,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/edenHeader.css">
-    <link rel="icon" href="Imagens/EDEN logotipo png.png">
+    <link rel="icon" href="imagens/EDEN logotipo png.png">
 </head>
 
 <body>
     <!-- Nav-Bar -->
     <header class="main-header">
-        <a href="index.html"><img src="Imagens/EDEN logotipo png.png" alt="" id="edenLogo"></a>
+        <a href="index.html"><img src="imagens/EDEN logotipo png.png" alt="" id="edenLogo"></a>
 
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="./HTMLS/edenQuemSomos.html">Quem somos</a></li>
+                <li><a href="./html/edenQuemSomos.html">Quem somos</a></li>
                 <li><a href="index.html#app">App</a></li>
             </ul>
         </nav>
 
-        <a href="./HTMLS/edenLogin.html"><img src="Imagens/Cadeado Nav-bar.png" alt="" id="cadeado_navbar"></a>
+        <a href="./html/edenLogin.html"><img src="imagens/Cadeado Nav-bar.png" alt="" id="cadeado_navbar"></a>
     </header>
 
     <!-- Primeira parte da Tela Inicial -->
@@ -34,20 +34,20 @@
                 <br>Vem pro <strong class="nomeEden">Eden</strong>!</h1>
 
                 <div class="botao">
-                    <img src="Imagens/Apple store logo.png" alt="" class="appleStoreLogo">
+                    <img src="imagens/Apple store logo.png" alt="" class="appleStoreLogo">
                     
-                    <img src="Imagens/Google Play logo.png" alt="" class="googlePlayLogo">
+                    <img src="imagens/Google Play logo.png" alt="" class="googlePlayLogo">
                 </div>
             </div>
 
-            <img src="Imagens/Robo.png" alt="" id="roboParte1">
+            <img src="imagens/Robo.png" alt="" id="roboParte1">
         </div>
     </container1>
 
     <!-- Segunda parte da tela Inicial -->
     <container2>
         <div class="parte2" id="app">
-            <img src="Imagens/Celular e Robo.gif" alt="" id="celularParte2">
+            <img src="imagens/Celular e Robo.gif" alt="" id="celularParte2">
 
             <div class="textoParte2">
                 <h1>Especialistas em tecnologia.</h1>
@@ -60,7 +60,7 @@
                 <br><strong>Mapa de anúncios:</strong>
                 <br>Veja os produtos mais próximos no mapa, negocie e pegue na mesma hora.</p>
 
-                <button><a href="./HTMLS/edenQuemSomos.html">Mais sobre a equipe</a></button>
+                <button><a href="./html/edenQuemSomos.html">Mais sobre a equipe</a></button>
             </div>
         </div>
     </container2>
@@ -87,7 +87,7 @@
 
     <container4>
         <div class="parte4">
-            <img src="Imagens/Fórum.gif" alt="" id="celularParte4">
+            <img src="imagens/Fórum.gif" alt="" id="celularParte4">
 
             <div class="textoParte4">
                 <h1>Forúm:</h1>
@@ -121,7 +121,7 @@
 
     <container5>
         <div class="parte5">
-            <img src="Imagens/Artigos.gif" alt="" id="celularParte5">
+            <img src="imagens/Artigos.gif" alt="" id="celularParte5">
 
             <div class="textoParte5">
                 <h1>Artigos:</h1>
@@ -160,8 +160,8 @@
 
             <div class="bloco2">
                 <h3>Transparência:</h3>
-                <button><a id="item" href="./HTMLS/edenTermosdeUso.html">Termos de Uso</a></button>
-                <button><a id="item" href="./HTMLS/edenPoliticaDePrivacidade.html">Política de Privacidade</a></button>
+                <button><a id="item" href="./html/edenTermosdeUso.html">Termos de Uso</a></button>
+                <button><a id="item" href="./html/edenPoliticaDePrivacidade.html">Política de Privacidade</a></button>
             </div>
         </div>
     </container6>
