adicionando boas práticas e o link com o css do media query

--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/edenHeader.css">
-    <link rel="icon" href="imagens/EDEN logotipo png.png">
+    <link rel="stylesheet" href="css/media-query.css">
+    <link rel="icon" href="imagens/EDENLogotipo.png">
 </head>
 
 <body>
     <!-- Nav-Bar -->
     <header class="main-header">
-        <a href="index.html"><img src="imagens/EDEN logotipo png.png" alt="" id="edenLogo"></a>
+        <a href="index.html"><img src="imagens/EDENLogotipo.png" alt="" id="edenLogo"></a>
 
         <nav>
             <ul>
@@ -27,7 +28,7 @@
     </header>
 
     <!-- Primeira parte da Tela Inicial -->
-    <container1>
+    <div class="container1">
         <div class="parte1">
             <div class="textoParte1">
                 <h1>Não sabe onde anunciar seu eletrônico?
@@ -42,10 +43,10 @@
 
             <img src="imagens/Robo.png" alt="" id="roboParte1">
         </div>
-    </container1>
+    </div>
 
     <!-- Segunda parte da tela Inicial -->
-    <container2>
+    <div class="container2">
         <div class="parte2" id="app">
             <img src="imagens/Celular e Robo.gif" alt="" id="celularParte2">
 
@@ -63,10 +64,10 @@
                 <button><a href="./html/edenQuemSomos.html">Mais sobre a equipe</a></button>
             </div>
         </div>
-    </container2>
+    </div>
 
     <!-- Terceira parte da tela Inicial -->
-    <container3>
+    <div class="container3">
         <div class="parte3">
             <h1>Conheça mais sobre o <strong class="nomeEden">Eden</strong> através de nosso Vídeo Institucional</h1>
 
@@ -74,7 +75,7 @@
                 src="https://www.youtube.com/embed/lKs7TueTbok?si=bJfA8xsMgIB_8-fn" title="Video Institucional Eden" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen id="videoInstitucional">
             </iframe>
         </div>
-    </container3>
+    </div>
 
     <!-- Forum -->
     <section class="titulo">
@@ -85,7 +86,7 @@
         </div>
     </section>
 
-    <container4>
+    <div class="container4">
         <div class="parte4">
             <img src="imagens/Fórum.gif" alt="" id="celularParte4">
 
@@ -108,7 +109,7 @@
                 </p>
             </div>
         </div>
-    </container4>
+    </div>
 
     <!-- Artigos -->
     <section class="titulo">
@@ -119,7 +120,7 @@
         </div>
     </section>
 
-    <container5>
+    <div class="container5">
         <div class="parte5">
             <img src="imagens/Artigos.gif" alt="" id="celularParte5">
 
@@ -142,10 +143,10 @@
                 </p>
             </div>
         </div>
-    </container5>
+    </div>
 
     <!-- Última parte da tela Inicial -->
-    <container6>
+    <div class="container6">
         <div class="parte6">
             <div class="edenSince">
                 <p>©Eden desde 2024</p>
@@ -164,6 +165,6 @@
                 <button><a id="item" href="./html/edenPoliticaDePrivacidade.html">Política de Privacidade</a></button>
             </div>
         </div>
-    </container6>
+    </div>
 </body>
 </html>
