--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="css/media-query-index.css">
     <link rel="stylesheet" href="css/edenHeader.css">
     <link rel="stylesheet" href="css/media-query-header.css">
-    <link rel="icon" href="imagens/logoEden.png">
+    <link rel="icon" href="/imagens/logoEden.png">
 </head>
 
 <body>
     <!-- Nav-Bar -->
     <header class="main-header">
-        <a href="index.html"><img src="imagens/logoEden.png" alt="" id="edenLogo"></a>
+        <a href="index.html"><img src="/imagens/logoEden.png" alt="" id="edenLogo"></a>
 
         <nav>
             <ul>
