--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="css/media-query-index.css">
     <link rel="stylesheet" href="css/edenHeader.css">
     <link rel="stylesheet" href="css/media-query-header.css">
-    <link rel="icon" href="./imagens/logoEden.png">
+    <link rel="icon" href="imagens/logoEden.png">
 </head>
 
 <body>
     <!-- Nav-Bar -->
     <header class="main-header">
-        <a href="index.html"><img src="/imagens/logoEden.png" alt="" id="edenLogo"></a>
+        <a href="index.html"><img src="imagens/logoEden.png" alt="" id="edenLogo"></a>
 
         <nav>
             <ul>
@@ -25,7 +25,7 @@
             </ul>
         </nav>
 
-        <a href="https://eden-servlet-rada.onrender.com/main/index.jsp"><img src="imagens/cadeado-navbar.png" alt="" id="cadeado_navbar"></a>
+        <a href="html/edenLogin.jsp"><img src="imagens/cadeado-navbar.png" alt="" id="cadeado_navbar"></a>
     </header>
 
     <!-- Primeira parte da Tela Inicial -->
@@ -40,7 +40,7 @@
                 </div>
             </div>
 
-            <img src="Imagens/roboEden-sombreado.png" alt="" id="roboParte1">
+            <img src="imagens/roboEden-sombreado.png" alt="" id="roboParte1">
         </div>
     </container1>
 
