--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
 
-        <a href="html/edenLogin.jsp"><img src="imagens/cadeado-navbar.png" alt="" id="cadeado_navbar"></a>
+        <a href="https://eden-servlet-rada.onrender.com/"><img src="imagens/cadeado-navbar.png" alt="" id="cadeado_navbar"></a>
     </header>
 
     <!-- Primeira parte da Tela Inicial -->
