--- a/src/html/edenPoliticaDePrivacidade.html
+++ b/src/html/edenPoliticaDePrivacidade.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/edenHeader.css">
     <link rel="stylesheet" href="../css/media-query-header.css">
     <link rel="icon" href="../imagens/logoEden.png">
+    <link rel="stylesheet" href="../css/media-query-documentacoes.css"
 </head>
 
 <body>
