Arrumando index e repsonsividade de alguns itens

--- a/src/index.html
+++ b/src/index.html
@@ -9,23 +9,23 @@
     <link rel="stylesheet" href="css/media-query-index.css">
     <link rel="stylesheet" href="css/edenHeader.css">
     <link rel="stylesheet" href="css/media-query-header.css">
-    <link rel="icon" href="imagens/logoEden.png">
+    <link rel="icon" href="/imagens/logoEden.png">
 </head>
 
 <body>
     <!-- Nav-Bar -->
     <header class="main-header">
-        <a href="index.html"><img src="imagens/logoEden.png" alt="" id="edenLogo"></a>
+        <a href="index.html"><img src="/imagens/logoEden.png" alt="" id="edenLogo"></a>
 
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="html/edenQuemSomos.html">Quem somos</a></li>
+                <li><a href="/jsp/edenQuemSomos.html">Quem somos</a></li>
                 <li><a href="index.html#app">App</a></li>
             </ul>
         </nav>
 
-        <a href="https://eden-servlet-rada.onrender.com/"><img src="imagens/cadeado-navbar.png" alt="" id="cadeado_navbar"></a>
+        <a href="/jsp/areaRestrita/index.jsp"><img src="/imagens/cadeado-navbar.png" alt="" id="cadeado_navbar"></a>
     </header>
 
     <!-- Primeira parte da Tela Inicial -->
@@ -36,18 +36,18 @@
                 <br>Vem pro <strong class="nomeEden">Eden</strong>!</h1>
 
                 <div class="botao">
-                    <a href="https://play.google.com/store" target="_blank"><img src="imagens/logo-google-play.png" alt="" class="googlePlayLogo"></a>
+                    <a href="https://play.google.com/store" target="_blank"><img src="/imagens/logo-google-play.png" alt="" class="googlePlayLogo"></a>
                 </div>
             </div>
 
-            <img src="imagens/roboEden-sombreado.png" alt="" id="roboParte1">
+            <img src="/imagens/roboEden-sombreado.png" alt="" id="roboParte1">
         </div>
     </container1>
 
     <!-- Segunda parte da tela Inicial -->
     <container2>
         <div class="parte2" id="app">
-            <img src="imagens/celular-e-robo.gif" alt="" id="celularParte2">
+            <img src="/imagens/celular-e-robo.gif" alt="" id="celularParte2">
 
             <div class="textoParte2">
                 <h1>Especialistas em tecnologia.</h1>
@@ -60,7 +60,7 @@
                 <br><strong>Mapa de anúncios:</strong>
                 <br>Veja os produtos mais próximos no mapa, negocie e pegue na mesma hora.</p>
 
-                <button><a href="html/edenQuemSomos.html">Mais sobre a equipe</a></button>
+                <button><a href="/jsp/edenQuemSomos.html#equipe">Mais sobre a equipe</a></button>
             </div>
         </div>
     </container2>
@@ -87,7 +87,7 @@
 
     <container4>
         <div class="parte4">
-            <img src="imagens/eden-forum.gif" alt="" id="celularParte4">
+            <img src="/imagens/eden-forum.gif" alt="" id="celularParte4">
 
             <div class="textoParte4">
                 <h1>Fórum:</h1>
@@ -121,7 +121,7 @@
 
     <container5>
         <div class="parte5">
-            <img src="imagens/eden-artigos.gif" alt="" id="celularParte5">
+            <img src="/imagens/eden-artigos.gif" alt="" id="celularParte5">
 
             <div class="textoParte5">
                 <h1>Artigos:</h1>
@@ -160,8 +160,8 @@
 
             <div class="bloco2">
                 <h3>Transparência:</h3>
-                <a id="item" href="html/edenTermosdeUso.html"><button>Termos de Uso</button></a>
-                <a id="item" href="html/edenPoliticaDePrivacidade.html"><button>Política de Privacidade</button></a>
+                <a id="item" href="/jsp/edenTermosdeUso.html"><button>Termos de Uso</button></a>
+                <a id="item" href="/jsp/edenPoliticaDePrivacidade.html"><button>Política de Privacidade</button></a>
             </div>
         </div>
     </container6>
