--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="/jsp/edenQuemSomos.html">Quem somos</a></li>
+                <li><a href="/html/edenQuemSomos.html">Quem somos</a></li>
                 <li><a href="index.html#app">App</a></li>
             </ul>
         </nav>
