Quem somos alterando

--- a/src/html/edenQuemSomos.html
+++ b/src/html/edenQuemSomos.html
@@ -45,7 +45,7 @@
 
 <!-- Título Equipe -->
 <section class="separador">
-    <div class="separadorConteudo">
+    <div class="separadorConteudo" id="equipe">
         <h2>Nossa Equipe</h2>
     </div>
 </section>
