--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
                 <br><strong>Mapa de anúncios:</strong>
                 <br>Veja os produtos mais próximos no mapa, negocie e pegue na mesma hora.</p>
 
-                <button><a href="/jsp/edenQuemSomos.html#equipe">Mais sobre a equipe</a></button>
+                <button><a href="html/edenQuemSomos.html#equipe">Mais sobre a equipe</a></button>
             </div>
         </div>
     </container2>
