Trocando texto do quem somos

--- a/src/html/edenQuemSomos.html
+++ b/src/html/edenQuemSomos.html
@@ -37,7 +37,7 @@
 
 <container1>
     <div class="parte1">
-        <p>Ao passar dos anos, cada vez mais temos um maior contato com aparelhos eletrônicos. Mas poucas pessoas sabem que o descarte incorreto desses aparelhos podem ser prejudiciais para nós e o meio ambiente. Por isso o Grupo Luminary teve a ideia de criar o aplicativo Eden, onde você consegue vender seus aparelhos eletrônicos usados ou comprar um. Assim evitamos o descarte desses aparelhos que ainda possam ter alguma utilidade.</p>
+        <p>O contato com aparelhos eletrônicos tem se intensificado ano após ano. No entanto, poucas pessoas sabem que o descarte incorreto desses aparelhos pode ser prejudicial para nós e para o meio ambiente. Por isso, o Grupo Luminary teve a ideia de criar o aplicativo Eden, que permite vender seus aparelhos eletrônicos usados ou comprar um novo. Dessa forma, evitamos o descarte desses aparelhos que ainda possam ter alguma utilidade.</p>
 
         <img src="../imagens/roboEden-sombreado.png" alt="">
     </div>
