Adicionando pontos de coleta no index.html

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,6 @@
         <div class="conteudoTitulo">
             <h2>Fórum</h2>
             <p>Página de conversa com diversas dúvidas e sugestões</p>
-            <a href="" class="btn">Saiba mais</a>
         </div>
     </section>
 
@@ -115,7 +114,6 @@
         <div class="conteudoTitulo">
             <h2>Artigos</h2>
             <p>Uma página cheia de notícias e informações sobre tecnologia</p>
-            <a href="" class="btn">Saiba mais</a>
         </div>
     </section>
 
@@ -144,9 +142,39 @@
         </div>
     </container5>
 
-    <!-- Última parte da tela Inicial -->
+    <!-- Pontos de Coleta -->
+    <section class="titulo">
+        <div class="conteudoTitulo">
+            <h2>Pontos de coleta</h2>
+            <p>Indicação de ecopontos para você descartar o seu lixo eletrônico</p>
+        </div>
+    </section>    
+
     <container6>
         <div class="parte6">
+            <img src="/imagens/eden-pontosColeta.png" alt="" id="imagemParte6">
+
+            <div class="textoParte6">
+                <h1>Pontos de coleta:</h1>    
+                <p>
+                    Em nossa aba de <strong>Pontos de coleta</strong> o usuário tem acesso a vários ecopontos de lixo eletrônico de acordo com sua geolocalização atual.
+                    <br>
+                    <br>
+                    Após a busca, o aplicativo exibe um mapa interativo com a localização de todos os pontos de coleta próximos a você.
+                    <br>
+                    <br>
+                    Cada ponto possui detalhes como nome do estabelecimento, endereço, horários de funcionamento e informações adicionais sobre o tipo de eletrônico que pode ser descartado.
+                    <br>
+                    <br>
+                    Assim mesmo que seu eletrônico não possa ser vendido no <strong class="nomeEden">Eden</strong>, você ainda pode o descartar de forma correta e ajudar ao meio-ambiente! 
+                </p>
+            </div>
+        </div>
+    </container6>
+
+    <!-- Última parte da tela Inicial -->
+    <container7>
+        <div class="parte7">
             <div class="edenSince">
                 <p>©Eden desde 2024</p>
             </div>
@@ -164,6 +192,6 @@
                 <a id="item" href="/jsp/edenPoliticaDePrivacidade.html"><button>Política de Privacidade</button></a>
             </div>
         </div>
-    </container6>
+    </container7>
 </body>
 </html>
