Adicionando pontos de coleta

--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,7 @@
 
     <container6>
         <div class="parte6">
-            <img src="/imagens/eden-pontosColeta.png" alt="" id="imagemParte6">
+            <img src="/imagens/pontoDeColeta.jpg" alt="" id="imagemParte6">
 
             <div class="textoParte6">
                 <h1>Pontos de coleta:</h1>    
