Arrumando diretivas de termos de uso e politicas de privacidade

--- a/src/index.html
+++ b/src/index.html
@@ -188,8 +188,8 @@
 
             <div class="bloco2">
                 <h3>Transparência:</h3>
-                <a id="item" href="/jsp/edenTermosdeUso.html"><button>Termos de Uso</button></a>
-                <a id="item" href="/jsp/edenPoliticaDePrivacidade.html"><button>Política de Privacidade</button></a>
+                <a id="item" href="/html/edenTermosdeUso.html"><button>Termos de Uso</button></a>
+                <a id="item" href="/html/edenPoliticaDePrivacidade.html"><button>Política de Privacidade</button></a>
             </div>
         </div>
     </container7>
