Adicionadno link novo

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
                 <br>Vem pro <strong class="nomeEden">Eden</strong>!</h1>
 
                 <div class="botao">
-                    <a href="https://play.google.com/store" target="_blank"><img src="/imagens/logo-google-play.png" alt="" class="googlePlayLogo"></a>
+                    <a href="https://raw.githubusercontent.com/Luminary-Team/eden-mobile/refs/heads/main/app/release/app-release.apk" target="_blank"><img src="/imagens/logo-google-play.png" alt="" class="googlePlayLogo"></a>
                 </div>
             </div>
 
